# bedrock-chatbot

./: README.md  docker-compose.yml
.github/workflows/: ci-build.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: bedrock_client.py  config.py
frontend/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
